# gitlab-manager

./: .gitignore  LICENSE  README.md  launch_gui.py  pyproject.toml
docs/: README.md  api-reference.md  user-guide.md
examples/: basic_usage.py  package_operations.py  project_discovery.py  utils.py
gui/: package_manager_gui.py
src/gitlabmanager/: __init__.py  client.py  discovery.py  exceptions.py  packages.py  pipelines.py  progress.py  releases.py  repositories.py  utils.py
tests/: test_packages.py
